--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Pet Sanctum</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
